--- a/pessoa-crud/Views/Conta/Registrar.cshtml
+++ b/pessoa-crud/Views/Conta/Registrar.cshtml
@@ -6,18 +6,18 @@
 <div class="row">
     <div class="col-8">
         <h1>Register User</h1>
-        <form action="/auth/register" method="post">
+        <form asp-action="Registrar" method="post">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email</label>
-                <input type="text" name="Username" value="@Model.Email" class="form-control" id="userEmail">
+                <input type="text" name="Email" value="@Model.Email" class="form-control" id="userEmail">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Senha</label>
-                <input type="password" name="Senha" class="form-control" id="userPassword">
+                <input type="password" value="@Model.Senha" name="Senha" class="form-control" id="userPassword">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" name="ConfirmarSenha" class="form-control" id="userConfirmPassword">
+                <input type="password" value="@Model.ConfirmarSenha" name="ConfirmarSenha" class="form-control" id="userConfirmPassword">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
