--- a/pessoa-crud/Views/Account/Login.cshtml
+++ b/pessoa-crud/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model pessoa_crud.ViewModel.ContaEntrarViewModel
+﻿@model pessoa_crud.ViewModel.AccountLoginViewModel
 @{
     ViewData["Title"] = "Register";
 }
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-8">
         <h1>Entrar</h1>
-        <form asp-action="Entrar" method="post">
+        <form asp-action="Login" method="post">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email</label>
                 <input type="text" name="Email" value="@Model.Email" class="form-control" id="userEmail">
