--- a/pessoa-crud/Views/Account/Register.cshtml
+++ b/pessoa-crud/Views/Account/Register.cshtml
@@ -1,7 +1,8 @@
 ﻿@model pessoa_crud.ViewModel.ContaRegistrarViewModel
 @{
-    ViewData["Title"] = "Register";
+    Layout = null;
 }
+
 
 <div class="row">
     <div class="col-8">
