--- a/pessoa-crud/Views/Account/Login.cshtml
+++ b/pessoa-crud/Views/Account/Login.cshtml
@@ -1,7 +1,6 @@
 ﻿@model pessoa_crud.ViewModel.AccountLoginViewModel
-@{
-    ViewData["Title"] = "Register";
-}
+@{ ViewData["Title"] = "Register"; }
+@{ Layout = "_Layout"; }
 
 <div class="row">
     <div class="col-8">
